k8s/Network-Policies/01-backend-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jerney-db-allow-backend-only
  namespace: jerney
spec: 
 podSelector:
   matchLabels: 
      app.kubernetes.io/name: jerney-db
 policyTypes:
  - Ingress
 ingress:
   - from:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: jerney-backend
     ports:
      - port: 5432
        protocol: TCP
