k8s/Network-Policies/02-backend-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jerney-backend-allow-frontend-policy
  namespace: jerney
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: jerney-backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: jerney-frontend
      ports:
        - port: 5000
          protocol: TCP
